src/styles/main.scss
@import '../../node_modules/node-bourbon/assets/stylesheets/_bourbon.scss';
@import './normalize.scss';
@import './mixins.scss';
@import './scrollbar.scss';

// $orange: #ff9933;
$orange: #6ce4ed;

html, body {
	background-color: #151515;
	color: white;
	height: 100%; width: 100%;
	overflow: hidden;
	position: absolute;
	top: 0; left: 0;
}

p, span, ul, a {
	letter-spacing: 1px;
	line-height: 1.5;
	@include font-ubuntu(13px, 300);
}

ul, li {
	list-style: none;
	padding: 0;
}

a {
	text-decoration: none;
}

a.shiny {
	text-decoration: none;
	color: $orange;
	position: relative;
	@include transition(all .2s $ease-out-cubic);

	&:after {
		content:'';
		position: absolute;
		top: 2px; left: 0;
		width: 100%; height: 100%;
		border-bottom: 0px solid $orange;
		@include transition(all .2s $ease-out-cubic);
		z-index: -1;
	}

	&:hover {
		color: white;
		&:after {
			border-bottom: 3px solid $orange;
		}
	}
	
}

// main content block
.scrollable-content {
	width: 100%; height: 100%;
	position: absolute;
	top: 100px;
	overflow-x: hidden; overflow-y: scroll;
	@include calc(height, '100% - 132px');
}

// for centering, sizing content
.wrapper {
	width: 90%;
	max-width: 720px;
	margin: 0 auto;
}

footer, header {
	position: absolute;
	width: 100%;
	background: black;
	z-index: 1;
	box-shadow: 0px 0px 6px black;
}

header {
	top: 0;
	height: 100px;
	line-height: 100px;

	#lpl-logo {
		float: left;
		margin-left: -22px;
		background-image: url(assets/images/logo-cyan.png);
		background-size: contain;
		width: 100px; height: 100px;
	}

	.logo-type {
		display: block;
		float: left;
		@include user-select(none);
		cursor: default;
		span {
			@include font-oswald(22px, 300);
			line-height: 100px;
		}
		span:first-child {
			font-weight: 400;
		}
	}

	nav {
		float: right;
		a {
			@include transition(.2s all);

			display: block;
			float: left;
			color: white;
			text-transform: uppercase;
			cursor: pointer;
			margin-left: 20px;
			@include font-oswald(14px, 300);
			line-height: 100px;

			border-bottom: 0px solid $orange;
			&:hover {
				border-bottom: 3px solid $orange;
				color: $orange;
			}

		}
	}

	@media (max-width: 720px){
		
		height: 80px;
		line-height: 80px;

		.logo-type span {
			font-size: 20px;
			line-height: 80px;
		}

		#lpl-logo {
			width: 80px; height: 80px;
		}

		nav {
			display: none;
			position: absolute;
			right: 10px; top: 80px;
			a {
				line-height: 20px;
			}
		}
	}

}

h1, h2, h3 {
	text-transform: uppercase;
	margin: 0;
}
h1 {
	@include font-oswald(32px, 400);
}
h2 {
	@include font-oswald(18px, 400);
}
h3 {
	@include font-ubuntu(16px, 700);
	text-transform: none;
}

footer {
	
	bottom: 0;
	height: 32px;

	.fb-holder {
		display: inline-block;
		float: left;
		margin-top: 6px;
	}
	a {
		float: right;
		line-height: 32px;
	}
}

section {
	padding-top: 20px;
	padding-bottom: 20px;
	&:first-of-type {
		margin-top: 30px;
	}
	&:last-of-type {
		margin-bottom: 130px;
	}
}



section#mercury {
	
	.btn {
		display: block;
		background-color: white;
		position: relative;
		color: #333;
		float: left;
		text-transform: uppercase;
		cursor: pointer;
		padding: 0px 10px 0px 50px;
		border-left: 3px solid $orange;

		margin-right: 20px;
		margin-bottom: 20px;
		
		.icon {
			position: absolute;
			left: 0;
			top: 0;
			width: 50px;
			height: 50px;
			z-index: 1;
			background-size: 35px;
			background-repeat: no-repeat;
			background-position: center center;
			background-image: url(assets/images/chrome-icon.svg);
			@include transition(all 1s $ease-out-quint);
		}

		a {
			line-height: 50px;
			@include font-oswald(18px);
			&:visited, &:link {color: #333;}
		}

		&:hover {
			.icon {
				@include transform(rotate(-1rad));
			}
		}
	}

	.launch-btn {
		@include user-select(none);
	}

	.try {
		line-height: 50px;
		margin-left: 10px;
		display: inline-block;
	}

	iframe {
		margin-top: 40px;
		margin-bottom: 20px;
		width: 100%;
		height: auto;
	}

	.sub-section {
		padding-top: 20px;
		padding-bottom: 10px;
		clear: both;
	}

	.sub-section.modes {
		video.mode {
			float: left;
			width: 400px; height: 400px;
			margin-right: 20px;
		}

		.descriptions {
			p {
				display: none;
			}
			p.selected {
				display: block;
			}
		}

		.buttons {
			.mode-btn {
				margin-right: 20px;
				padding: 5px;
				border-bottom: 0px solid $orange;
				cursor: pointer;
				display: inline-block;
				text-transform: uppercase;
				font-size: .9em;
				@include user-select(none);
				&:hover {

				}
				&.selected {
					color: $orange;
					border-bottom: 3px solid $orange;
				}
			}
		}

		@media (max-width: 720px){
			video.mode {
				width: 100%; height: auto;
				margin-bottom: 20px;
			}
		}
	}

 	.sub-section.gallery {
 		text-align: center;
 		.imgur-embed {

 		}
 	// 	@include user-select(none);
 	// 	.filmstrip {
	 // 		width: 720px;
	 // 		height: 143px;
	 // 		position: relative;	
 	// 	}
 	// 	.button {
 	// 		position: absolute;
 	// 		text-align: center;
 	// 		line-height: 143px;
 	// 		top: 0;
 	// 		width: 30px;
 	// 		height: 100%;
 	// 		background: rgba(255, 255, 255, .1);
 	// 		cursor: pointer;
 	// 		&.left {
 	// 			left: -40px;
 	// 		}
 	// 		&.right {
 	// 			right: -40px;
 	// 		}
 	// 		&:hover {
 	// 			color: $orange;
 	// 			background: rgba(255, 255, 255, .2);
 	// 		}
 	// 		@include transition(all .2s);
 	// 	}
 	// 	.thumb-wrapper {
 	// 		width: 100%; height: 100%;
	 // 		overflow: hidden;
 	// 		position: relative;
 	// 	}
		// .thumbs {
		// 	width: 2740px;
		// 	position: absolute;
		// 	left: 0;
		// 	overflow-x: scroll;
		// 	overflow-y: hidden;
		// 	@include transition(left .22s $ease-in-out-cubic);
		// 	img {
		// 		cursor: pointer;
		// 		padding: 0 10px;
		// 		float: left;
		// 		&:first-child {
		// 			padding-left: 0;
		// 		}
		// 		&:last-child {
		// 			padding-right: 0;
		// 		}

		// 	}
		// }
 	}

}



.sub-section.faq {

	h3 {
		margin-top: 30px;
	}

	p {
		padding-left: 40px;
	}
}



section#open-source {
	li {
		margin-top: 20px;
		img {
			position: absolute;
			height: 54px;
		}
		h3, span {
			padding-left: 70px;
		}
		span {
			line-height: 36px;
			display: block;
		}
	}
}



section#story {
	.person {
		margin-bottom: 20px;
		overflow: hidden;
		h3 {
			padding-top: 20px;
		}
		img {
			float: left;
			margin-right: 20px;
			margin-top: 20px;
		}
		.content-block {
			float: left;
			width: 540px;
		}
	}
}


.video-container {
	display: none;
    position: absolute;
    height: 100%; width: 100%;
    overflow: hidden;
	z-index: -1;
}
.autoplay .video-container {
	display: block;
}

video#bg-video {
	position: absolute;
	@include transform(translate3d(-50%, -50%, 0));
	top: 50%; left: 50%;
    min-width: 100%; min-height: 100%;
	opacity: .15;
}

